<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:elevation="4dp"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="UnusedAttribute" />

    <FrameLayout

        android:id="@+id/panel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/outputLayout"
        android:layout_below="@id/toolbar"

        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/imageViewWave"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/canvas_background"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp" />

                <LinearLayout
                    android:id="@+id/layoutPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|right"
                            android:paddingRight="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/power"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|right"
                            android:paddingRight="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/analog"
                            android:textAppearance="?android:attr/textAppearanceSmall" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <Switch
                            android:id="@+id/switchPower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp" />

                        <Switch
                            android:id="@+id/switchAnalog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:gravity="center_vertical|center_horizontal"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/x_pos"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/y_pos"
                            android:textAppearance="?android:attr/textAppearanceSmall" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <SeekBar
                            android:id="@+id/seekBarXPos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"

                            android:layout_weight="1"

                            android:max="4"
                            android:maxHeight="1000dp"
                            android:progress="0" />

                        <SeekBar
                            android:id="@+id/seekBarYPos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_weight="1"
                            android:max="4"
                            android:maxHeight="1000dp"
                            android:progress="2" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/outputLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_above="@+id/layoutButton"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <ScrollView
            android:id="@+id/scrollViewOutput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_border_round_rect">

            <TextView
                android:id="@+id/textViewOutput"
                style="?android:attr/textAppearanceMedium"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:linksClickable="false"
                android:longClickable="true"
                android:maxLines="300"
                android:padding="5dp"
                android:textColor="@color/colorPrimary" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp">


        <Button
            android:id="@+id/imageButtonReset"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/buttonPlay"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/play_sample" />


        <Button
            android:id="@+id/buttonClear"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

    </LinearLayout>
</RelativeLayout>